# notify-remote

./: Cargo.toml  LICENSE  README.md  build.rs
.devcontainer/: Dockerfile
proto/: notify_remote.proto
src/: .gitignore  client.rs  lib.rs  server.rs
