[package]
name = "notify-remote"
version = "0.1.0"
authors = ["Silcet"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpc = "0.8.3"
grpc-protobuf = "0.8.3"
protobuf = "~2.18.2"
futures = "0.3"
env_logger = "0.4"
notify-rust = "4.3"
clap = "2.33"
local_ipaddress = "0.1.3"

[build-dependencies]
protoc-rust-grpc = "0.8.3"

[[bin]]
name = "notify-remote-server"

[[bin]]
name = "notify-remote"